AUT-1264 Add option to specify token endpoint auth method
