# tara-admin-api-schema/src/main/resources/swagger.yaml
@@ -645,6 +645,7 @@ components:
         - scope
         - institution_metainfo
         - token_request_allowed_ip_addresses
+        - token_endpoint_auth_method
       properties:
         id:
           type: string
@@ -690,6 +691,12 @@ components:
             minLength: 1
             maxLength: 200
             type: string
+        token_endpoint_auth_method:
+          type: string
+          enum:
+            - client_secret_basic
+            - client_secret_post
+          example: client_secret_basic
         secret:
           type: string
         eidas_requester_id:
